@@ -90,7 +90,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.time.LocalDate.now;
@@ -527,7 +526,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             List<String> actualPbas = dynamicList.getListItems().stream()
                 .map(DynamicListElement::getLabel)
-                .collect(Collectors.toList());
+                .toList();
 
             assertThat(actualPbas).containsOnly("12345", "98765");
             assertThat(dynamicList.getValue()).isEqualTo(DynamicListElement.EMPTY);
@@ -1777,10 +1776,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                     .expiryDate(LocalDate.now().plusDays(
                         180))
                     .build());
-
-            Organisation organisation = Organisation.builder()
-                .paymentAccount(List.of("12345", "98765"))
-                .build();
         }
 
         @Test
@@ -1790,16 +1785,16 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .code("FeeCode")
                 .calculatedAmountInPence(BigDecimal.valueOf(19990))
                 .build();
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .sdtRequestIdFromSdt("sdtRequestIdFromSdt")
                 .totalClaimAmount(BigDecimal.valueOf(1999))
                 .build();
             given(feesService.getFeeDataByTotalClaimAmount(any())).willReturn(feeData);
-            when(interestCalculator.calculateBulkInterest(caseData)).thenReturn(new BigDecimal(0));
+            when(interestCalculator.calculateBulkInterest(localCaseData)).thenReturn(new BigDecimal(0));
             given(organisationService.findOrganisation(any())).willReturn(Optional.of(bulkOrganisation));
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             assertThat(response.getData()).extracting("claimFee").extracting("calculatedAmountInPence", "code")
                 .containsExactly(String.valueOf(feeData.getCalculatedAmountInPence()), feeData.getCode());
@@ -1808,15 +1803,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAddSdtRequestId_whenInvokedAndBulkClaim() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .sdtRequestIdFromSdt("sdtRequestIdFromSdt")
                 .totalClaimAmount(BigDecimal.valueOf(1999))
                 .build();
-            when(interestCalculator.calculateBulkInterest(caseData)).thenReturn(new BigDecimal(0));
+            when(interestCalculator.calculateBulkInterest(localCaseData)).thenReturn(new BigDecimal(0));
             given(organisationService.findOrganisation(any())).willReturn(Optional.of(bulkOrganisation));
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             assertThat(response.getData()).extracting("sdtRequestId").asString().contains("sdtRequestIdFromSdt");
         }
@@ -1824,11 +1819,11 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldNotAddSdtRequestId_whenInvokedAndNotBulkClaim() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .build();
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             assertThat(response.getData()).doesNotHaveToString("sdtRequestId");
         }
@@ -1836,15 +1831,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignFirstPbaNumber_whenInvokedAndBulkClaim() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .sdtRequestIdFromSdt("sdtRequestIdFromSdt")
                 .totalClaimAmount(BigDecimal.valueOf(1999))
                 .build();
-            when(interestCalculator.calculateBulkInterest(caseData)).thenReturn(new BigDecimal(0));
+            when(interestCalculator.calculateBulkInterest(localCaseData)).thenReturn(new BigDecimal(0));
             given(organisationService.findOrganisation(any())).willReturn(Optional.of(bulkOrganisation));
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             System.out.println(response.getData().get("applicantSolicitor1PbaAccounts"));
             assertThat(response.getData()).extracting("applicantSolicitor1PbaAccounts").asString().contains("12345");
@@ -1890,12 +1885,12 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAddCaseReferenceSubmittedDateAndAllocatedTrack_whenInvoked() {
             // Given
-            CallbackParams params = CallbackParamsBuilder.builder().of(ABOUT_TO_SUBMIT, caseData).request(
+            CallbackParams localParams = CallbackParamsBuilder.builder().of(ABOUT_TO_SUBMIT, caseData).request(
                     CallbackRequest.builder().eventId(CREATE_SERVICE_REQUEST_CLAIM.name()).build())
                 .build();
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
             assertThat(response.getData())
@@ -1925,15 +1920,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCaseName1v2_whenCaseIs1v2() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimNotified_1v2_andNotifyBothSolicitors().build();
-            CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimNotified_1v2_andNotifyBothSolicitors().build();
+            CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
-            assertThat(response.getData().get("caseNameHmctsInternal"))
-                .isEqualTo("'John Rambo' v 'Sole Trader', 'John Rambo'");
+            assertThat(response.getData())
+                .containsEntry("caseNameHmctsInternal", "'John Rambo' v 'Sole Trader', 'John Rambo'");
             assertThat(response.getData().get("caseManagementCategory")).extracting("value")
                 .extracting("code").isEqualTo("Civil");
         }
@@ -1941,15 +1936,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCaseName2v1_whenCaseIs2v1() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimSubmitted2v1RespondentRegistered().build();
-            CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimSubmitted2v1RespondentRegistered().build();
+            CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
-            assertThat(response.getData().get("caseNameHmctsInternal"))
-                .isEqualTo("'John Rambo', 'Jason Rambo' v 'Sole Trader'");
+            assertThat(response.getData())
+                .containsEntry("caseNameHmctsInternal", "'John Rambo', 'Jason Rambo' v 'Sole Trader'");
             assertThat(response.getData().get("caseManagementCategory")).extracting("value")
                 .extracting("code").isEqualTo("Civil");
         }
@@ -1957,11 +1952,11 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCaseName1v1_whenCaseIs1v1() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimNotified_1v1().build();
-            CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimNotified_1v1().build();
+            CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
             assertThat(response.getData().get("caseNameHmctsInternal"))
@@ -1974,15 +1969,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldCopyRespondent1OrgPolicyReferenceForSameRegisteredSolicitorScenario_whenInvoked() {
             caseData = CaseDataBuilder.builder().atStateClaimIssued1v2AndSameRepresentative()
                 .respondent2(Party.builder()
-                    .type(Party.Type.COMPANY)
-                    .companyName("Company 3")
-                    .build())
+                                 .type(Party.Type.COMPANY)
+                                 .companyName("Company 3")
+                                 .build())
                 .build().toBuilder()
                 .specRespondentCorrespondenceAddressRequired(YES)
                 .specRespondentCorrespondenceAddressdetails(Address.builder()
-                    .postCode("Postcode")
-                    .addressLine1("Address")
-                    .build())
+                                                                .postCode("Postcode")
+                                                                .addressLine1("Address")
+                                                                .build())
                 .build();
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
                 callbackParamsOf(
@@ -2049,8 +2044,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             // Given
             var callbackParams = params.toBuilder()
                 .caseData(params.getCaseData().toBuilder()
-                    .respondent1OrganisationPolicy(null)
-                    .build())
+                              .respondent1OrganisationPolicy(null)
+                              .build())
                 .build();
 
             // When
@@ -2093,17 +2088,17 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             @Test
             void shouldAddIdamEmailToIdamDetails_whenIdamEmailIsCorrect() {
                 // Given
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                     .applicantSolicitor1CheckEmail(CorrectEmail.builder()
-                        .email(EMAIL)
-                        .correct(YES)
-                        .build())
+                                                       .email(EMAIL)
+                                                       .correct(YES)
+                                                       .build())
                     .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                        .email(DIFFERENT_EMAIL)
-                        .build())
+                                                        .email(DIFFERENT_EMAIL)
+                                                        .build())
                     .build();
 
-                params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+                params = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
                 // When
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -2126,20 +2121,20 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 given(idamClient.getUserDetails(any()))
                     .willReturn(UserDetails.builder().email(EMAIL).id(userId).build());
 
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                     .applicantSolicitor1CheckEmail(CorrectEmail.builder()
-                        .email(EMAIL)
-                        .correct(NO)
-                        .build())
+                                                       .email(EMAIL)
+                                                       .correct(NO)
+                                                       .build())
                     .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                        .email(DIFFERENT_EMAIL)
-                        .build())
+                                                        .email(DIFFERENT_EMAIL)
+                                                        .build())
                     .build();
 
-                CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+                CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
                 // When
-                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
                 // Then
                 assertThat(response.getData())
@@ -2197,7 +2192,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 List<LocationRefData> locations = new ArrayList<>();
                 locations.add(LocationRefData.builder().regionId("Site Name").epimmsId("36791")
-                    .build());
+                                  .build());
                 given(locationRefDataService.getCourtLocationsForDefaultJudgments(any()))
                     .willReturn(locations);
 
@@ -2208,17 +2203,17 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             void shouldReturnExpectedCourtLocation_whenAirlineExists() {
                 // Given
 
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft()
                     .isFlightDelayClaim(YES)
                     .flightDelay(FlightDelayDetails.builder()
-                        .airlineList(
-                            DynamicList.builder()
-                                .value(DynamicListElement.builder().code("GULF_AIR").label("Gulf Air")
-                                    .build()).build()).build()).build();
-                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                                     .airlineList(
+                                         DynamicList.builder()
+                                             .value(DynamicListElement.builder().code("GULF_AIR").label("Gulf Air")
+                                                        .build()).build()).build()).build();
+                CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
 
                 // When
-                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
                 // Then
                 assertThat(response.getData()).extracting("flightDelayDetails").extracting("flightCourtLocation").extracting("region")
@@ -2228,19 +2223,19 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             @Test
             void shouldReturnExpectedCourtLocation_whenOtherAirlineSelected() {
                 // Given
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft()
                     .flightDelay(FlightDelayDetails.builder()
-                        .airlineList(
-                            DynamicList.builder()
-                                .value(DynamicListElement.builder().code("OTHER").label("OTHER")
-                                    .build()).build()).build()).build();
-                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                                     .airlineList(
+                                         DynamicList.builder()
+                                             .value(DynamicListElement.builder().code("OTHER").label("OTHER")
+                                                        .build()).build()).build()).build();
+                CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
 
                 given(locationRefDataService.getCourtLocationsForDefaultJudgments(any()))
                     .willReturn(getSampleCourLocationsRefObject());
 
                 // When
-                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
                 // Then
                 assertThat(response.getData()).extracting("flightDelayDetails").doesNotHaveToString("flightCourtLocation");
@@ -2456,7 +2451,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 assertThat(response).usingRecursiveComparison().isEqualTo(
                     SubmittedCallbackResponse.builder()
                         .confirmationHeader(format("# Your claim has been received and will progress offline%n## "
-                            + "Claim number: %s", REFERENCE_NUMBER))
+                                                       + "Claim number: %s", REFERENCE_NUMBER))
                         .confirmationBody(format(
                             LIP_CONFIRMATION_SCREEN,
                             format("/cases/case-details/%s#CaseDocuments", CASE_ID),
@@ -2485,7 +2480,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             assertThat(response).usingRecursiveComparison().isEqualTo(
                 SubmittedCallbackResponse.builder()
                     .confirmationHeader(format("# Your claim has been received and will progress offline%n## "
-                        + "Claim number: %s", REFERENCE_NUMBER))
+                                                   + "Claim number: %s", REFERENCE_NUMBER))
                     .confirmationBody(format(
                         SPEC_LIP_CONFIRMATION_SCREEN,
                         format("/cases/case-details/%s#CaseDocuments", CASE_ID),
@@ -2518,14 +2513,14 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                     .confirmationHeader(format("# Please now pay your claim fee%n# using the link below"))
                     .confirmationBody(
                         format(
-                            SPEC_LIP_CONFIRMATION_BODY_PBAV3,
-                            format("/cases/case-details/%s#Service%%20Request", caseData.getCcdCaseReference()),
-                            format("/cases/case-details/%s#CaseDocuments", CASE_ID),
-                            responsePackLink,
-                            n9aLink,
-                            n9bLink,
-                            n215Link
-                        ) + exitSurveyContentService.applicantSurvey())
+                        SPEC_LIP_CONFIRMATION_BODY_PBAV3,
+                        format("/cases/case-details/%s#Service%%20Request", caseData.getCcdCaseReference()),
+                        format("/cases/case-details/%s#CaseDocuments", CASE_ID),
+                        responsePackLink,
+                        n9aLink,
+                        n9bLink,
+                        n215Link
+                    ) + exitSurveyContentService.applicantSurvey())
                     .build());
         }
     }
